; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/extr_rgb_matrix.c_rgb_matrix_step_reverse.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/extr_rgb_matrix.c_rgb_matrix_step_reverse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@rgb_matrix_config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@RGB_MATRIX_EFFECT_MAX = common dso_local global i32 0, align 4
@STARTING = common dso_local global i32 0, align 4
@rgb_task_state = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rgb_matrix_step_reverse() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rgb_matrix_config, i32 0, i32 0), align 4
  %2 = add nsw i32 %1, -1
  store i32 %2, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rgb_matrix_config, i32 0, i32 0), align 4
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rgb_matrix_config, i32 0, i32 0), align 4
  %4 = icmp slt i32 %3, 1
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @RGB_MATRIX_EFFECT_MAX, align 4
  %7 = sub nsw i32 %6, 1
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rgb_matrix_config, i32 0, i32 0), align 4
  br label %8

8:                                                ; preds = %5, %0
  %9 = load i32, i32* @STARTING, align 4
  store i32 %9, i32* @rgb_task_state, align 4
  %10 = call i32 (...) @eeconfig_update_rgb_matrix()
  ret void
}

declare dso_local i32 @eeconfig_update_rgb_matrix(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
